[package]
name = "dash3"
version = "0.1.0"
edition = "2021"

[dependencies]
grass = { version = "0.13.4", features = ["macro"] }
gtk4 = { version = "0.9", features = ["v4_14"] }
gtk4-layer-shell = "0.4"
notify = "7.0.0"
flume = { version = "0.11.1", features = ["async", "select"] }
async-broadcast = "0.7.1"
pam-sys = "0.5.6"
thiserror = "2.0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2.169"
futures = "0.3.31"

[build-dependencies]
glib-build-tools = "0.20.0"
