[package]
name = "dash3"
version = "0.1.0"
edition = "2021"

[dependencies]
grass = { version = "0.13.4", features = ["macro"] }
gtk4 = { version = "0.9", features = ["v4_14"] }
gtk4-layer-shell = "0.4"
notify = "7.0.0"
flume = { version = "0.11.1", features = ["async", "select"] }
pam-sys = "0.5.6"
thiserror = "2.0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2.169"
futures = "0.3.31"
futures-signals = "0.3.34"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
wayland-client = "0.31.7"
wayland-backend = { version = "0.3.7", features = ["client_system"] }
smithay-client-toolkit = "0.19.2"
gdk4-wayland = { version = "0.9.5", features = ["v4_12", "wayland_crate"] }
fragile = "2.0.0"

[build-dependencies]
glib-build-tools = "0.20.0"
